# blocksize

./: .gitignore  README.md  app.py  build.sh  deploy.sh  index.html  pyproject.toml  requirements.txt  run.sh
.github/workflows/: build.yml
