[project]
name = "ethereum-block-sizes"
version = "0.1.0"
description = "Ethereum Block Size Parameterization & Visualization Tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.44.1",
    "numpy>=1.23.0",
    "pandas>=1.4.0",
    "plotly>=5.0.0",
]

[tool.uv]
dev-dependencies = []